--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<html>
+<body>
+<script language="JavaScript" type="text/javascript">
+//<![CDATA[
+(function() {
+          var random = new Date();
+            
+              var so_src = ('https:' == document.location.protocol ? 'https://ssl.socdm.com' : 'http://tg.socdm.com') +
+                '/adsv/v1?posall=TEST&id=14735&t=js&rnd='+ random.getTime() + '&tp=' + encodeURIComponent(document.location.href) + '&pp=' + encodeURIComponent(document.referrer);
+                  
+                     document.write('<sc'+'ript language="JavaScript" type="text/javascript" src="'+so_src+'"></sc'+'ript>');
+})();
+//]]>
+</script>
+</body>
+</html>
