--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
 <html>
 <body>
-<script>
-  var _mf = _mf || [['mid=1652'],['nid=49'],['width=300'],['height=250']];
-    (function(d, t) {
-                var e = d.createElement('img'), ps = d.getElementsByTagName(t), p = ps[ps.length-1];
-                    e.style.cssText = "position:absolute;top:-10000px;left:-10000px";
-                        p.parentNode.appendChild(e);
-                            e.src = '//stats.mediaforge.com/stat/imps?' + _mf.join('&');
-                              }(document, 'script'));
-    </script>
-    <iframe src="//jp-amp.mediaforge.com/?merchant=aeon_credit&nID=49&width=300&height=250&strategy=ret...}" width="300" height="250" frameborder="0" scrolling="no"></iframe>
+
+<img src="http://d.m.dtpf.jp/api/clustersyncso" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;"/>
 </body>
 </html>
