--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <html>
 <body>
+<!-- BEGIN TAG MGMT DO NOT MODIFY -->
+<script type="text/javascript">
+(function(w,d,S,P,s,t,u) {
+          u = ('https:' == d.location.protocol ? 'https://ssl.socdm.com' : 'http://tg.socdm.com') + '/so-async.js?' + 'siteid=' + s;
+            t=(t=d.getElementsByTagName(S))[t.length-1];
+              (w[P]=w[P]||{})[s]=t.id=[P,s].join('-');
+                s=d.createElement(S);s.async=!0;s.src=u;
+                  t.parentNode.insertBefore(s,t);
+})(window,document,'script','scaleout-tagmanagement','15432');
+</script>
+<!-- END TAG MGMT -->
 
-<img src="http://d.m.dtpf.jp/api/clustersyncso" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;"/>
 </body>
 </html>
