--- a/index.html
+++ b/index.html
@@ -1,16 +1,8 @@
 <html>
 <body>
-<!-- BEGIN TAG MGMT DO NOT MODIFY -->
-<script type="text/javascript">
-(function(w,d,S,P,s,t,u) {
-          u = ('https:' == d.location.protocol ? 'https://ssl.socdm.com' : 'http://tg.socdm.com') + '/so-async.js?' + 'siteid=' + s;
-            t=(t=d.getElementsByTagName(S))[t.length-1];
-              (w[P]=w[P]||{})[s]=t.id=[P,s].join('-');
-                s=d.createElement(S);s.async=!0;s.src=u;
-                  t.parentNode.insertBefore(s,t);
-})(window,document,'script','scaleout-tagmanagement','15432');
-</script>
-<!-- END TAG MGMT -->
+<!-- Conversion Pixel - cv - DO NOT MODIFY -->
+<script src='http://tg.test.socdm.com/sa/js?said=cv1901&cvval=300&t=1' type='text/javascript'></script>
+<!-- End of Conversion Pixel -->
 
 </body>
 </html>
