--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
 <html>
 <body>
-<!-- Conversion Pixel - cv - DO NOT MODIFY -->
-<script src='http://tg.test.socdm.com/sa/js?said=cv1901&cvval=4300&t=1' type='text/javascript'></script>
-<!-- End of Conversion Pixel -->
+１）映画（洋画）　-　映画作品ページ洋画
+<!-- Segment Pixel - 映画.com_映画（洋画） - DO NOT MODIFY -->
+<script src='http://i.socdm.com/s/so_sg.js?sgid=17160&t=1' type='text/javascript'></script>
+<!-- End of Segment Pixel -->
 
+２）映画（邦画）　-　映画作品ページ邦画
+<!-- Segment Pixel - 映画.com_映画（邦画） - DO NOT MODIFY -->
+<script src='http://i.socdm.com/s/so_sg.js?sgid=17161&t=1' type='text/javascript'></script>
+<!-- End of Segment Pixel -->
+
+３）アニメ           -　アニメニュース
+<!-- Segment Pixel - 映画.com_アニメ - DO NOT MODIFY -->
+<script src='http://i.socdm.com/s/so_sg.js?sgid=17162&t=1' type='text/javascript'></script>
+<!-- End of Segment Pixel -->
+
+４）その他          -　ニュース、劇場ページ、その他(TOP含む)
+<!-- Segment Pixel - 映画.com_その他 - DO NOT MODIFY -->
+<script src='http://i.socdm.com/s/so_sg.js?sgid=17163&t=1' type='text/javascript'></script>
+<!-- End of Segment Pixel -->
 </body>
 </html>
