--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <html>
 <body>
-１）映画（洋画）　-　映画作品ページ洋画
-<!-- Segment Pixel - 映画.com_映画（洋画） - DO NOT MODIFY -->
-<script src='http://i.socdm.com/s/so_sg.js?sgid=17160&t=1' type='text/javascript'></script>
-<!-- End of Segment Pixel -->
+<!--
+商用テスト媒体 【Criteoテスト】1_320x50_ホワイトリスト_CPM50 18415
+-->
+<div id="adg_14060" style="width: 320px; height: 50px; position: relative; text-align: center; overflow: hidden; margin: 0 auto;"></div>
+<script type="text/javascript">
+  var locs = '14060';
+    var displaytype = 1;
+      var adtype = 'SP';
+        var random = new Date().getTime();
+          var script = document.createElement('script');
+            script.type = 'text/javascript';
+              script.src = 'http://i.socdm.com/sdk/js/adg-script-client.js?id=' + locs +
+                               '&rnd=' + random + '&displayid=' + displaytype + '&adType=' + adtype +
+                                                '&targetID=adg_14060&acl=off';
+                                                  var adcon = document.getElementById('adg_14060');
+                                                    adcon.parentNode.insertBefore(script, adcon);
+                                                      var frm = document.createElement('iframe');
+                                                        frm.id = 'adg_14060_iframe';
+                                                          frm.style.border = 'none';
+                                                            frm.style.width = '320px';
+                                                              frm.style.height = '50px';
+                                                                frm.style.overflow = 'hidden';
+                                                                  frm.style.margin = '0 auto';
+                                                                    frm.scrolling='no';
+                                                                      adcon.appendChild(frm);
+                                                                      </script>
 
-２）映画（邦画）　-　映画作品ページ邦画
-<!-- Segment Pixel - 映画.com_映画（邦画） - DO NOT MODIFY -->
-<script src='http://i.socdm.com/s/so_sg.js?sgid=17161&t=1' type='text/javascript'></script>
-<!-- End of Segment Pixel -->
 
-３）アニメ           -　アニメニュース
-<!-- Segment Pixel - 映画.com_アニメ - DO NOT MODIFY -->
-<script src='http://i.socdm.com/s/so_sg.js?sgid=17162&t=1' type='text/javascript'></script>
-<!-- End of Segment Pixel -->
-
-４）その他          -　ニュース、劇場ページ、その他(TOP含む)
-<!-- Segment Pixel - 映画.com_その他 - DO NOT MODIFY -->
-<script src='http://i.socdm.com/s/so_sg.js?sgid=17163&t=1' type='text/javascript'></script>
-<!-- End of Segment Pixel -->
 </body>
 </html>
