--- a/index.html
+++ b/index.html
@@ -1,31 +1,16 @@
 <html>
 <body>
-<!--
-商用テスト媒体 【Criteoテスト】1_320x50_ホワイトリスト_CPM50 18415
--->
-<div id="adg_14060" style="width: 320px; height: 50px; position: relative; text-align: center; overflow: hidden; margin: 0 auto;"></div>
+<!-- BEGIN TAG MGMT DO NOT MODIFY -->
 <script type="text/javascript">
-  var locs = '14060';
-    var displaytype = 1;
-      var adtype = 'SP';
-        var random = new Date().getTime();
-          var script = document.createElement('script');
-            script.type = 'text/javascript';
-              script.src = 'http://i.socdm.com/sdk/js/adg-script-client.js?id=' + locs +
-                               '&rnd=' + random + '&displayid=' + displaytype + '&adType=' + adtype +
-                                                '&targetID=adg_14060&acl=off';
-                                                  var adcon = document.getElementById('adg_14060');
-                                                    adcon.parentNode.insertBefore(script, adcon);
-                                                      var frm = document.createElement('iframe');
-                                                        frm.id = 'adg_14060_iframe';
-                                                          frm.style.border = 'none';
-                                                            frm.style.width = '320px';
-                                                              frm.style.height = '50px';
-                                                                frm.style.overflow = 'hidden';
-                                                                  frm.style.margin = '0 auto';
-                                                                    frm.scrolling='no';
-                                                                      adcon.appendChild(frm);
-                                                                      </script>
+//<![CDATA[
+(function() {
+          var so_src = ('https:' == document.location.protocol ? 'https://tg.test.socdm.com' : 'http://tg.test.socdm.com') + '/so.js?' + 'siteid=8322';
+            var so_script = '<scr'+'ipt type="text/javascript" src="'+so_src+'"></scr'+'ipt>';
+              document.write(so_script);
+})();
+//]]>
+</script>
+<!-- END TAG MGMT -->
 
 
 </body>
