--- a/index.html
+++ b/index.html
@@ -1,17 +1,8 @@
 <html>
 <body>
-<!-- BEGIN TAG MGMT DO NOT MODIFY -->
-<script type="text/javascript">
-//<![CDATA[
-(function() {
-          var so_src = ('https:' == document.location.protocol ? 'https://tg.test.socdm.com' : 'http://tg.test.socdm.com') + '/so.js?' + 'siteid=8322';
-            var so_script = '<scr'+'ipt type="text/javascript" src="'+so_src+'"></scr'+'ipt>';
-              document.write(so_script);
-})();
-//]]>
-</script>
-<!-- END TAG MGMT -->
-
+aaa
+<iframe src="http://oo.socdm.com/index.html" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" width="800" height="100"></iframe>
+bbb
 
 </body>
 </html>
