--- a/index.html
+++ b/index.html
@@ -1,18 +1,9 @@
 <html>
 <body>
 aaa
-<!-- BEGIN TAG MGMT DO NOT MODIFY -->
-<script type="text/javascript">
-(function(w,d,S,P,s,t,u) {
-          u = ('https:' == d.location.protocol ? 'https://ssl.socdm.com' : 'http://tg.socdm.com') + '/so-async.js?' + 'siteid=' + s;
-            t=(t=d.getElementsByTagName(S))[t.length-1];
-              (w[P]=w[P]||{})[s]=t.id=[P,s].join('-');
-                s=d.createElement(S);s.async=!0;s.src=u;
-                  t.parentNode.insertBefore(s,t);
-})(window,document,'script','scaleout-tagmanagement','15432');
-</script>
-<!-- END TAG MGMT -->
-
+<!-- Segment Pixel - セグメントテスト - DO NOT MODIFY -->
+<script src='http://tg.test.socdm.com/s/so_sg.js?sgid=9820&t=1' type='text/javascript'></script>
+<!-- End of Segment Pixel -->
 bbb
 
 </body>
