--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 <body>
 aaa
+<script type="text/javascript">
+document.write(document.cookie);
+</script>
 <!-- Segment Pixel - セグメントテスト - DO NOT MODIFY -->
 <script src='http://tg.test.socdm.com/s/so_sg.js?sgid=9820&t=1' type='text/javascript'></script>
 <!-- End of Segment Pixel -->
