--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-	  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 xmlns:fb="https://www.facebook.com/2008/fbml" xmlns:og="http://ogp.me/ns#"
 xml:lang="en" lang="ja">
-<head profile="http://gmpg.org/xfn/11">
+<head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<!--
 <style type="text/css" media="screen">
 button:hover {
 cursor: pointer;
@@ -35,58 +35,63 @@ font-size: 14px;
 line-height: 22px;
 }
 </style>
-<body>
-<div id="m1" style="display:none;">
-<p>現在、このブラウザでのクッキーによるトラッキングはアクティブです</p>
-<button type="button" name="" value="" onclick="so_optout();">広告配信用クッキーを無効化（オプトアウト）する</button>
-</div>
-<div id="m2" style="display:none;">
-<p>現在、このブラウザでのクッキーによるトラッキングはオプトアウトされています</p>
-<button type="button" name="" value="" onclick="so_optout_cancel();">広告配信用クッキーを有効にする</button>
-</div>
-<div id="m3" style="display:none;">
-<p>現在、このブラウザではクッキーによるトラッキングはされていません</p>
-</div>
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script language="javascript">
-<!--
-(function(){
-$.ajax({
-  type: 'GET',
-  url: 'http://tg.socdm.com/aux/is_optout',
-  dataType: 'jsonp',
-  cache: false,
-  success: function(data) {
-    if (data.is_optout) {
-      document.getElementById('m2').style.display='block';
-    } else {
-      document.getElementById('m1').style.display='block';
-    }
-  }});
-})();
-function so_optout() {
-  $.ajax({
-    type: 'GET',
-    url: 'http://tg.socdm.com/aux/optout',
-    dataType: 'jsonp',
-    cache: false,
-    success: function(data) {
-      alert('広告配信用クッキーの無効化（オプトアウト）が完了しました');
-      location.reload();
-  }});
-}
-function so_optout_cancel(){
-  $.ajax({
-    type: 'GET',
-    url: 'http://tg.socdm.com/aux/optin',
-    dataType: 'jsonp',
-    cache: false,
-    success: function(data) {
-      alert('広告配信用クッキーが有効になりました');
-      location.reload();
-  }});
-}
-//-->
-</script>
+-->
 </head>
-</body></html>
+<body>
+    <div id="m1" style="display:none;">
+      <div align="center">
+        <button type="button" class="btn_to_common" value="" onclick="so_optout();">ターゲティング広告配信を停止する</button>
+      </div><br/>
+      <dl class="targetting">
+        <dt>お客様の現在のステータス</dt>
+        <dd style="margin-left: 10px;">このブラウザではターゲティング広告の配信が有効になっています。</dd>
+      </dl>
+    </div>
+    <div id="m2" class="targetting" style="display:none;">
+      <div align="center">
+        <button type="button" class="btn_to_common" value="" onclick="so_optout();">ターゲティング広告配信を停止する</button>
+      </div><br/>
+      <dl class="targetting">
+        <dt>お客様の現在のステータス</dt>
+        <dd style="margin-left: 10px;">このブラウザではターゲティング広告の配信が有効になっています。</dd>
+      </dl>
+    </div>
+  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <script language="javascript">
+  (function(){
+    $.ajax({
+      type: 'GET',
+      url: 'http://tg.socdm.com/aux/is_optout',
+      dataType: 'jsonp',
+      cache: false,
+      success: function(data) {
+        if (data.is_optout) {
+          document.getElementById('m2').style.display='block';
+        } else {
+          document.getElementById('m1').style.display='block';
+        }
+    }});
+  })();
+  function so_optout() {
+    $.ajax({
+      type: 'GET',
+      url: 'http://tg.socdm.com/aux/optout',
+      dataType: 'jsonp',
+      cache: false,
+      success: function(data) {
+        location.reload();
+    }});
+  }
+  function so_optout_cancel(){
+    $.ajax({
+      type: 'GET',
+      url: 'http://tg.socdm.com/aux/optin',
+      dataType: 'jsonp',
+      cache: false,
+      success: function(data) {
+        location.reload();
+    }});
+  }
+  </script>
+</body>
+</html>
