--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ xmlns:fb="https://www.facebook.com/2008/fbml" xmlns:og="http://ogp.me/ns#"
 xml:lang="en" lang="ja">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link rel="stylesheet" type="text/css" href="css/common_low.css" media="screen">
+<link rel="stylesheet" type="text/css" href="css/terms.css" media="screen">
 <!--
 <style type="text/css" media="screen">
 button:hover {
