--- a/test.html
+++ b/test.html
@@ -1,9 +1,9 @@
 <html>
 <body>
 test1
-<img src="http(s)://ssp-sync.i-mobile.co.jp/sync.ashx?dspid=8" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://ssp-sync.i-mobile.co.jp/sync.ashx?dspid=8" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
 test2
-<img src="http(s)://ssp-sync.i-mobile.co.jp/sync.ashx?dspid=9" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://ssp-sync.i-mobile.co.jp/sync.ashx?dspid=9" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
 test3
 </body>
 </html>
