--- a/test.html
+++ b/test.html
@@ -1,9 +1,17 @@
 <html>
 <body>
-test1
-<img src="http://ssp-sync.i-mobile.co.jp/sync.ashx?dspid=8" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-test2
-<img src="http://ssp-sync.i-mobile.co.jp/sync.ashx?dspid=9" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-test3
+aaa
+音楽ナタリー
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_natalie&attr_raw=music%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="https://ssl.socdm.com/aux/extsync?aid=scaleout&sid=syn_natalie&attr_raw=music%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+
+コミックナタリー
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_natalie&attr_raw=commic%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="https://ssl.socdm.com/aux/extsync?aid=scaleout&sid=syn_natalie&attr_raw=commic%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+
+お笑いナタリー
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_natalie&attr_raw=joke%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="https://ssl.socdm.com/aux/extsync?aid=scaleout&sid=syn_natalie&attr_raw=joke%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+aaa
 </body>
 </html>
