--- a/sg.html
+++ b/sg.html
@@ -1,7 +1,13 @@
 <html>
 <body>
-<!-- Segment Pixel - 石橋テスト - DO NOT MODIFY -->
+<!-- Segment Pixel - 石橋テスト - DO NOT MODIFY 
 <script src='http://i.socdm.com/s/so_sg.js?sgid=15765&t=1' type='text/javascript'></script>
+-->
 <!-- End of Segment Pixel -->
+
+<!-- Segment Pixel - 石橋テスト - DO NOT MODIFY -->
+<img height='1' src='//tg.socdm.com/sa/img?said=sg15765&t=2' style='position:absolute;border:none;padding:0;margin:0;' width='1' />
+<!-- End of Segment Pixel -->
+
 </body>
 </html>
