--- a/test.html
+++ b/test.html
@@ -1,7 +1,52 @@
 <html>
 <body>
 
-<a href="http://www.scaleout.jp">ScaleOut</a>
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=1%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=2%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=3%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=4%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=5%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=6%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=7%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=8%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=9%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=10%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=11%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=12%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=13%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=14%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=15%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=16%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=17%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=18%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=19%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=20%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=21%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=22%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=23%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=24%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=25%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=26%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=27%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=28%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=29%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=30%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=31%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=32%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=33%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=34%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=35%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=36%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=37%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=38%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=39%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=40%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=41%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=42%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=43%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=44%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=45%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
+<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=46%3d1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
 
 </body>
 </html>
