--- a/test.html
+++ b/test.html
@@ -1,52 +1,9 @@
 <html>
 <body>
+<!-- Segment Pixel - 石橋テスト - DO NOT MODIFY -->
+<script src='https://ssl.socdm.com/s/so_sg.js?sgid=15765&t=1' type='text/javascript'></script>
+<!-- End of Segment Pixel -->
 
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=1%3d1&xuid=aaa" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=2%3d1&xuid=aab" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=3%3d1&xuid=aac" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=4%3d1&xuid=aad" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=5%3d1&xuid=aae" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=6%3d1&xuid=aaf" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=7%3d1&xuid=aag" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=8%3d1&xuid=aa1" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=9%3d1&xuid=aa2" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=10%3d1&xuid=aa3" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=11%3d1&xuid=aa4" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=12%3d1&xuid=aa5" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=13%3d1&xuid=aa6" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=14%3d1&xuid=aa7" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=15%3d1&xuid=aa8" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=16%3d1&xuid=aa9" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=17%3d1&xuid=aa10" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=18%3d1&xuid=aa11" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=19%3d1&xuid=aa12" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=20%3d1&xuid=aa13" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=21%3d1&xuid=aa14" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=22%3d1&xuid=aa15" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=23%3d1&xuid=aa16" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=24%3d1&xuid=aa17" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=25%3d1&xuid=aa18" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=26%3d1&xuid=aa19" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=27%3d1&xuid=aa20" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=28%3d1&xuid=aa21" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=29%3d1&xuid=aa22" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=30%3d1&xuid=aa23" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=31%3d1&xuid=aa24" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=32%3d1&xuid=aa25" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=33%3d1&xuid=aa26" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=34%3d1&xuid=aa27" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=35%3d1&xuid=aa28" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=36%3d1&xuid=aa29" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=37%3d1&xuid=aa30" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=38%3d1&xuid=aa31" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=39%3d1&xuid=aa32" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=40%3d1&xuid=aa33" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=41%3d1&xuid=aa34" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=42%3d1&xuid=aa35" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=43%3d1&xuid=aa36" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=44%3d1&xuid=aa37" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=45%3d1&xuid=aa38" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
-<img src="http://tg.socdm.com/aux/extsync?aid=scaleout&sid=syn_nanapi&attr_raw=46%3d1&xuid=aa39" width="1" height="1" style="position:absolute;border:none;padding:0;margin:0;" />
 
 </body>
 </html>
