--- a/test.html
+++ b/test.html
@@ -1,9 +1,9 @@
 <html>
 <body>
-<!-- Segment Pixel - 石橋テスト - DO NOT MODIFY -->
-<script src='https://ssl.socdm.com/s/so_sg.js?sgid=15765&t=1' type='text/javascript'></script>
-<!-- End of Segment Pixel -->
 
-
+<div class="sc_body_pixel" style="position:absolute;border:none;padding:0;margin:0;z-index:-1000;"></div>
+<script type="text/javascript">var sc_params = {"user_id":8,"app_id":14815,"type":"PG-1_5","ad_id":2505,"distributer_id":8,"redirect":"${CLICK_URL_ENC_1}","lp":"http%3A%2F%2Fr.advg.jp%2Fadptg_count%2Fr%3Fadptg_aid%3D1123%26adptg_mid%3D15196%26adptg_lid%3D1","width":"300","height":"250" };
+  </script>
+  <script type="text/javascript" src="//scaleout.smartcanvas.net/smartcanvas.pkg.js"></script>
 </body>
 </html>
