--- a/test.html
+++ b/test.html
@@ -1,6 +1,11 @@
 <html>
 <body>
 
+<div class="sc_body_pixel" style="position:absolute;border:none;padding:0;margin:0;z-index:-1000;"></div>
+<script type="text/javascript">var sc_params = {"user_id":8,"app_id":15107,"type":"DM-1_1","ad_id":2617,"distributer_id":8,"redirect":"${CLICK_URL_ENC_1}","lp":"http%3A%2F%2Fchanto.jp.net%2F","width":"320","height":"50" };
+</script>
+<script type="text/javascript" src="//scaleout.smartcanvas.net/smartcanvas.pkg.js"></script>
+
 <!-- Google Tag Test / sp 300x250 -->
 <iframe src="//cdn.smartcanvas.net/index.pkg.html?user_id=8&app_id=15008&type=DM-1_1&ad_id=2558&distributer_id=10&redirect=${CLICK_URL_ENC_1}&lp=http%3A%2F%2Fhitokuse.com" width="300" height="250" frameborder="0"></iframe>
 
