--- a/test2.html
+++ b/test2.html
@@ -1,8 +1,28 @@
 <html>
 <body>
-<div class="sc_body_pixel" style="position:absolute;border:none;padding:0;margin:0;z-index:-1000;"></div>
-<script type="text/javascript">var sc_params = {"user_id":8,"app_id":15107,"type":"DM-1_1","ad_id":2617,"distributer_id":8,"redirect":"${CLICK_URL_ENC_1}","lp":"http%3A%2F%2Fchanto.jp.net%2F","width":"320","height":"50" };
-  </script>
-  <script type="text/javascript" src="//scaleout.smartcanvas.net/smartcanvas.pkg.js"></script>
+
+<script type="text/javascript">
+
+/* <![CDATA[ */
+
+(function() {
+
+          var d = document, enc = encodeURIComponent;
+
+            var attr_params = '1=1';
+
+              var so_src = ('https:' == d.location.protocol ? 'https://ssl.socdm.com' : 'http://tg.socdm.com')
+
+                  + '/aux/extsync?aid=rich&sid=beautycat&attr_raw=' + enc(attr_params)
+
+                      + '&tp=' + enc(d.location.href) + '&pp=' + enc(d.referrer) + '&rnd=' + new Date().getTime();
+
+                        d.write('<img src="'+so_src+'" />');
+
+})()
+
+/* ]]> */
+
+</script>
 </body>
 </html>
