--- a/test2.html
+++ b/test2.html
@@ -1,24 +1,10 @@
 <html>
 <body>
 
+<!-- Segment Pixel - ｐDMPテスト用 - DO NOT MODIFY -->
 <script type="text/javascript">
-
-(function() {
-
-          var d = document, enc = encodeURIComponent;
-
-            var attr_params = '1=1';
-
-              var so_src = ('https:' == d.location.protocol ? 'https://ssl.socdm.com' : 'http://tg.socdm.com')
-
-                  + '/aux/extsync?aid=rich&sid=beautycat&attr_raw=' + enc(attr_params)
-
-                      + '&tp=' + enc(d.location.href) + '&pp=' + enc(d.referrer) + '&rnd=' + new Date().getTime();
-
-                        d.write('<img src="'+so_src+'" />');
-
-})()
-
-</script>
+  document.write(unescape("%3Cimg height='1' src='" + ((document.location.protocol == "http:") ? "http://tg.socdm.com/sa/img?said=sg21648" : "https://ssl.socdm.com/sa/img?said=sg21648-s") + "&t=2' style='position:absolute;border:none;padding:0;margin:0;' width='1' /%3E"));
+  </script>
+  <!-- End of Segment Pixel -->
 </body>
 </html>
