--- a/test.html
+++ b/test.html
@@ -1,34 +1,9 @@
 <html>
 <body>
 
-<div class="sc_body_pixel" style="position:absolute;border:none;padding:0;margin:0;z-index:-1000;"></div>
-<script type="text/javascript">var sc_params = {"user_id":8,"app_id":15107,"type":"DM-1_1","ad_id":2617,"distributer_id":8,"redirect":"${CLICK_URL_ENC_1}","lp":"http%3A%2F%2Fchanto.jp.net%2F","width":"320","height":"50" };
-</script>
-<script type="text/javascript" src="//scaleout.smartcanvas.net/smartcanvas.pkg.js"></script>
-
-<!-- Google Tag Test / sp 300x250 -->
-<iframe src="//cdn.smartcanvas.net/index.pkg.html?user_id=8&app_id=15008&type=DM-1_1&ad_id=2558&distributer_id=10&redirect=${CLICK_URL_ENC_1}&lp=http%3A%2F%2Fhitokuse.com" width="300" height="250" frameborder="0"></iframe>
-
-<!-- Google Tag Test / sp 300x250 -->
-<iframe src="//cdn.smartcanvas.net/index.pkg.html?user_id=8&app_id=15008&type=DM-1_1&ad_id=2558&distributer_id=10&redirect=${CLICK_URL_ENC_1}&lp=http%3A%2F%2Fhitokuse.com" width="300" height="250" frameborder="0"></iframe>
+<!-- Segment Pixel - 石橋テスト - DO NOT MODIFY -->
+<img height='1' src='http://tg.socdm.com/sa/img?said=sg15765&t=2' style='position:absolute;border:none;padding:0;margin:0;' width='1' />
+<!-- End of Segment Pixel -->
 
 
-<!-- Google Tag Test / pc 300x250 -->
-<iframe src="//cdn.smartcanvas.net/index.pkg.html?user_id=8&app_id=15010&type=PCMV-1_5&ad_id=2559&distributer_id=10&redirect=${CLICK_URL_ENC_1}&lp=http%3A%2F%2Fhitokuse.com&width=300&height=250" width="300" height="250" frameborder="0"></iframe>
-
-<!-- Google Tag Test / pc 300x250 -->
-<iframe src="//cdn.smartcanvas.net/index.pkg.html?user_id=8&app_id=15010&type=PCMV-1_5&ad_id=2559&distributer_id=10&redirect=${CLICK_URL_ENC_1}&lp=http%3A%2F%2Fhitokuse.com&width=300&height=250" width="300" height="250" frameborder="0"></iframe>
-
-
-<div class="sc_body_pixel" style="position:absolute;border:none;padding:0;margin:0;z-index:-1000;"></div>
-<script type="text/javascript">var sc_params = {"user_id":8,"app_id":14815,"type":"PG-1_5","ad_id":2505,"distributer_id":8,"redirect":"${CLICK_URL_ENC_1}","lp":"http%3A%2F%2Fr.advg.jp%2Fadptg_count%2Fr%3Fadptg_aid%3D1123%26adptg_mid%3D15196%26adptg_lid%3D1","width":"300","height":"250" };
-  </script>
-  <script type="text/javascript" src="//scaleout.smartcanvas.net/smartcanvas.pkg.js"></script>
- 
-<br/><br/>
-<div class="sc_body_pixel" style="position:absolute;border:none;padding:0;margin:0;z-index:-1000;"></div>
-<script type="text/javascript">var sc_params = {"user_id":8,"app_id":14816,"type":"PG-1_5","ad_id":2506,"distributer_id":8,"redirect":"${CLICK_URL_ENC_1}","lp":"http%3A%2F%2Fv6.advg.jp%2Fadpv6%2Fr%2F7or_W2h","width":"300","height":"250" };
-  </script>
-  <script type="text/javascript" src="//scaleout.smartcanvas.net/smartcanvas.pkg.js"></script>
-</body>
 </html>
