--- a/test.html
+++ b/test.html
@@ -1,9 +1,17 @@
 <html>
 <body>
 
-<!-- Segment Pixel - 石橋テスト - DO NOT MODIFY -->
-<img height='1' src='http://tg.socdm.com/sa/img?said=sg15765&t=2' style='position:absolute;border:none;padding:0;margin:0;' width='1' />
-<!-- End of Segment Pixel -->
-
+<script language="JavaScript" type="text/javascript">
+//<![CDATA[
+(function() {
+          var random = new Date();
+            
+              var so_src = ('https:' == document.location.protocol ? 'https://ssl.socdm.com' : 'http://tg.socdm.com') +
+                '/adsv/v1?posall=TESTFILL&id=15113&t=js&rnd='+ random.getTime() + '&tp=' + encodeURIComponent(document.location.href) + '&pp=' + encodeURIComponent(document.referrer);
+                  
+                     document.write('<sc'+'ript language="JavaScript" type="text/javascript" src="'+so_src+'"></sc'+'ript>');
+})();
+//]]>
+</script>
 
 </html>
