--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 (function() {
           var random = new Date();
             
-              var so_src = ('https:' == document.location.protocol ? 'https://ssl.socdm.com' : 'http://tg.socdm.com') +
+              var so_src = ('https:' == document.location.protocol ? 'https://ssl.socdm.com' : 'https://ssl.socdm.com') +
                 '/adsv/v1?posall=TESTFILL&id=15113&t=js&rnd='+ random.getTime() + '&tp=' + encodeURIComponent(document.location.href) + '&pp=' + encodeURIComponent(document.referrer);
                   
                      document.write('<sc'+'ript language="JavaScript" type="text/javascript" src="'+so_src+'"></sc'+'ript>');
